# gimp-data-extras

./: .cvsignore  .gitignore  AUTHORS  AUTHORS.brushes  ChangeLog  INSTALL  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  configure.ac  configure.in  gimp-data-extras.doap
brushes/: 50x50square.gbr  50x50squareBlur.gbr  Makefile.am  WindozeSux.gbr  airplane.gbr  asteroid.gbr  berserk.gbr  bigcircle.gbr  bigcircle2.gbr  bigcircle3.gbr  bigcircle4.gbr  bullethole.gbr  bush.gbr  cross_large.gbr  cross_small.gbr  defender.gbr  demonattack.gbr  diamond.gbr  duck.gbr  elk.gbr  flags.gbr  flower.gbr  gecko.gbr  glyph.gbr  grid.gbr  grid2.gbr  hash.gbr  jack.gbr  joust.gbr  manta.gbr  pacman.gbr  point.gbr  punch.gbr  qbert3Blur.gbr  reach.gbr  ribbon.gbr  rings1.gbr  rings2.gbr  rings3.gbr  rings4.gbr  (+33 more)
brushes/Fun/: Makefile.am  bird.gbr  guitar.gbr
brushes/Geometry/: 50x50cone.gbr  50x50squareBlur2.gbr  Makefile.am  qbert2.gbr  sphere36.gbr  sphere55.gbr  sphere79.gbr
brushes/Splatters/: Makefile.am  flower_large.gbr  nova.gbr  star1.gbr  star4.gbr  star5.gbr  swirl.gbr  wave.gbr
brushes/Texture/: Makefile.am  cloth.gbr  text1.gbr  text2.gbr  text3.gbr
debian/: README.debian  changelog  control  copyright  rules
desktop/: Makefile.am  test-appdata.sh.in
gradients/: Makefile.am
palettes/: Makefile.am
patterns/: Makefile.am  blackwhitefloor.pat  blob1.pat  blob2.pat  bluebar.pat  bluecanyons.pat  bluemetal.pat  brownie.pat  cashew.pat  chains.pat  chroma.pat  clovers.pat  color.pat  colorblob.pat  colorwhirl.pat  connestoga.pat  contrawhirl.pat  cow.pat  crash1.pat  crazytile.pat  deepswirl.pat  drymud.pat  electric-blue-ribbons.pat  etbf.pat  funnymess2.pat  goldcloth.pat  granite2.pat  greyweave.pat  greyweave2.pat  grid.pat  gridwhirltile.pat  headache.pat  horiz.pat  inlay.pat  leaves6.pat  meltedcolors.pat  metallica.pat  mhuerock.pat  money.pat  neurons.pat  (+18 more)
patterns/Legacy/: 3dweave.pat  Makefile.am  abstract_flowers.pat  blackoil.pat  bluemars.pat  bluespikes.pat  bwcubes.pat  canyons2.pat  circuit.pat  clouds.pat  coins.pat  colored_rock.pat  crystals.pat  curvedledge.pat  diffpat.pat  dirt.pat  disco.pat  dunemaze.pat  dunes.pat  eggcarton.pat  floor_tile.pat  funnyblobs.pat  funnymess.pat  fuzzy-colors.pat  gold.pat  green_curtains.pat  green_eek.pat  ice2.pat  icechex.pat  krinkle.pat  land1.pat  land2.pat  lathe.pat  leaves3.pat  leaves4.pat  lumps.pat  metallica.pat  metalpaths.pat  oooh3.pat  orangecheese.pat  (+17 more)
plug-ins/: Makefile.am
plug-ins/max-rgb/: max-rgb.c
plug-ins/python3/: Makefile.am  py-slice.py
po/: .gitignore  POTFILES.in  POTFILES.skip
scripts/: Makefile.am  bovinated-logo.scm  carved-logo.scm  crystal-logo.scm  gradient-bevel-logo.scm  i26-gunya2.scm  text-circle.scm
