dnl Process this file with autoconf to produce a configure script.
AC_INIT(brushes/flower.gbr)

AM_INIT_AUTOMAKE(gimp-data-extras, 2.0.0)
AM_MAINTAINER_MODE
AC_PROG_CC

dnl AM_PATH_GIMP_2_0(1.3.23, , AC_MSG_ERROR(Cannot find GIMP-2.0. See the INSTALL file for help.))
PKG_CHECK_MODULES(gimp, gimp-2.0)
GIMP_DATA_DIR=`$PKG_CONFIG gimp-2.0  --variable=gimpdatadir`

AC_SUBST(GIMP_DATA_DIR)

brushdata=`ls -1 $srcdir/brushes | grep -v Makefile`
dnl gradientdata=`ls -1 $srcdir/gradients | grep -v Makefile`
dnl palettedata=`ls -1 $srcdir/palettes | grep -v Makefile`
patterndata=`ls -1 $srcdir/patterns | grep -v Makefile`

brushdata=`echo $brushdata`
dnl gradientdata=`echo $gradientdata`
dnl palettedata=`echo $palettedata`
patterndata=`echo $patterndata`

AC_SUBST(brushdata)
dnl AC_SUBST(gradientdata)
dnl AC_SUBST(palettedata)
AC_SUBST(patterndata)

dnl Output the Makefiles
AC_OUTPUT(Makefile brushes/Makefile patterns/Makefile)
