dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.54)

m4_define([gimp_data_extras_version], [2.0.0])

AC_INIT([The GIMP Extra Data Files], [gimp_data_extras_version],
        [http://bugzilla.gnome.org/enter_bug.cgi?product=GIMP],
        [gimp-data-extras])

AC_CONFIG_SRCDIR([brushes/flower.gbr])

AM_INIT_AUTOMAKE(no-define)
AM_MAINTAINER_MODE

PKG_CHECK_MODULES(gimp, gimp-2.0)
GIMP_DATA_DIR=`$PKG_CONFIG gimp-2.0  --variable=gimpdatadir`

AC_SUBST(GIMP_DATA_DIR)

brushdata=`ls -1 $srcdir/brushes | grep -v Makefile`
patterndata=`ls -1 $srcdir/patterns | grep -v Makefile`

brushdata=`echo $brushdata`
patterndata=`echo $patterndata`

AC_SUBST(brushdata)
AC_SUBST(patterndata)

dnl Output the Makefiles
AC_CONFIG_FILES([
Makefile
brushes/Makefile
patterns/Makefile
])

AC_OUTPUT
