brushdatadir = $(gimpdatadir)/brushes

brushdata =
gradientdata =
palettedata =
patterndata =

brushdata_DATA = @brushdata@

EXTRA_DATA =
EXTRA_DIST = $(brushdata_DATA)

.PHONY: files

FILES	=\

	50x50cone.gbr		\
	50x50square.gbr		\
	50x50squareBlur.gbr	\
	50x50squareBlur2.gbr	\
	WindozeSux.gbr		\
	airplane.gbr		\
	asteroid.gbr		\
	berserk.gbr		\
	bigcircle.gbr		\
	bigcircle2.gbr		\
	bigcircle3.gbr		\
	bigcircle4.gbr		\
	bird.gbr		\
	bullethole.gbr		\
	bush.gbr		\
	cloth.gbr		\
	cross_large.gbr		\
	cross_small.gbr		\
	defender.gbr		\
	demonattack.gbr		\
	diamond.gbr		\
	duck.gbr		\
	elk.gbr			\
	flags.gbr		\
	flower.gbr		\
	flower_large.gbr	\	
	gecko.gbr		\
	glyph.gbr		\
	grid.gbr		\
	grid2.gbr		\
	guitar.gbr		\
	hash.gbr		\
	jack.gbr		\
	joust.gbr		\
	manta.gbr		\
	nova.gbr		\
	pacman.gbr		\
	point.gbr		\
	punch.gbr		\
	qbert2.gbr		\
	qbert3Blur.gbr		\
	reach.gbr		\
	ribbon.gbr		\	
	rings1.gbr		\
	rings2.gbr		\
	rings3.gbr		\
	rings4.gbr		\
	rings5.gbr		\
	rings6.gbr		\
	rings7.gbr		\	
	sball.gbr		\
	slope.gbr		\
	snake.gbr		\
	snowflake.gbr		\
	space1.gbr		\
	space2.gbr		\
	space3.gbr		\
	space4.gbr		\
	space5.gbr		\
	space6.gbr		\
	space7.gbr		\
	sparkle.gbr		\
	sparkle2.gbr		\	
	sphere29.gbr		\
	sphere36.gbr		\
	sphere47.gbr		\
	sphere55.gbr		\
	sphere79.gbr		\
	star_medium.gbr		\
	star_small.gbr		\
	swirl.gbr		\
	swirl2.gbr		\
	text1.gbr		\	
	text2.gbr		\
	text3.gbr		\
	text4.gbr		\
	therefore.gbr		\
	tictactoe.gbr		\
	tile.gbr		\
	triangle.gbr		\	
	triangle1.gbr		\
	triangle2.gbr		\
	triangle3.gbr		\
	tulip.gbr		\
	wave.gbr		\
	yars.gbr

