brushdatadir = $(gimpdatadir)/brushes

brushdata =
gradientdata =
palettedata =
patterndata =

brushdata_DATA = @brushdata@

EXTRA_DATA =
EXTRA_DIST = $(brushdata_DATA)

.PHONY: files

FILES	=\

	50x50cone.gbr		\
	50x50square.gbr		\
	50x50squareBlur.gbr	\
	50x50squareBlur2.gbr	\
	bigcircle.gbr		\
	bigcircle2.gbr		\
	bigcircle3.gbr		\
	bigcircle4.gbr		\
	bird.gbr		\
	bullethole.gbr		\
	callig1.gbr		\
	callig2.gbr		\
	callig3.gbr		\
	callig4.gbr		\
	cloth.gbr		\
	flower.gbr		\
	flower_large.gbr	\	
	gecko.gbr		\
	grid.gbr		\
	grid2.gbr		\
	guitar.gbr		\
	nova.gbr		\
	point.gbr		\
	punch.gbr		\
	qbert2.gbr		\
	qbert3Blur.gbr		\
	reach.gbr		\
	sphere29.gbr		\
	sphere36.gbr		\
	sphere47.gbr		\
	sphere55.gbr		\
	sphere79.gbr		\
	star1.gbr		\
	star2.gbr		\
	star3.gbr		\
	star4.gbr		\
	star5.gbr		\
	swirl.gbr		\
	swirl2.gbr		\
	text1.gbr		\	
	text2.gbr		\
	text3.gbr		\
	text4.gbr		\
	tulip.gbr		\
	wave.gbr		\

