## Makefile.am for gimp-data-extras/plug-ins

# Note: we don't add python2/ on purpose because these are only kept
# here in case someone wants to port them to newer GIMP 3 + Python 3
# API. As Python2/GIMP2, they still exist in `gimp-2-10` official branch
# in GIMP repository.

SUBDIRS = \
	python3
