## Process this file with automake to produce Makefile.in

scriptdatadir = $(GIMP_DATA_DIR)/scripts

scripts = \
	3d-outline.scm			\
	3dTruchet.scm			\
	alien-glow-arrow.scm		\
	alien-glow-bar.scm		\
	alien-glow-bullet.scm		\
	alien-glow-button.scm		\
	alien-glow-logo.scm		\
	alien-neon-logo.scm		\
	basic1-logo.scm			\
	basic2-logo.scm			\
	beveled-button.scm		\
	beveled-pattern-arrow.scm	\
	beveled-pattern-bullet.scm	\
	beveled-pattern-button.scm	\
	beveled-pattern-heading.scm	\
	beveled-pattern-hrule.scm	\
	blended-logo.scm		\
	bovinated-logo.scm		\
	camo.scm			\
	carved-logo.scm			\
	chalk.scm			\
	chip-away.scm			\
	chrome-logo.scm			\
	comic-logo.scm			\
	coolmetal-logo.scm		\
	crystal-logo.scm		\
	flatland.scm			\
	frosty-logo.scm			\
	glossy.scm			\
	glowing-logo.scm		\
	gradient-bevel-logo.scm		\
	i26-gunya2.scm			\
	land.scm			\
	neon-logo.scm			\
	news-text.scm			\
	predator.scm			\
	pupi-button.scm			\
	rendermap.scm			\
	sota-chrome-logo.scm		\
	speed-text.scm			\
	starscape-logo.scm		\
	swirltile.scm			\
	swirly-pattern.scm		\
	t-o-p-logo.scm			\
	text-circle.scm			\
	textured-logo.scm		\
	title-header.scm		\
	truchet.scm

scriptdata_DATA = $(scripts)

EXTRA_DIST = $(scripts)
