## Makefile.am for gimp/data/brushes/Geometry

brushbasicdatadir = $(gimpdatadir)/brushes/Geometry

brushdata_DATA = \
	50x50cone.gbr		\
	50x50square.gbr		\
	50x50squareBlur.gbr	\
	50x50squareBlur2.gbr	\
	bigcircle.gbr		\
	bigcircle2.gbr		\
	bigcircle3.gbr		\
	bigcircle4.gbr		\
	grid.gbr		\
	grid2.gbr		\
	qbert2.gbr		\
	qbert3Blur.gbr		\
	sphere29.gbr		\
	sphere36.gbr		\
	sphere47.gbr		\
	sphere55.gbr		\
	sphere79.gbr
