## Makefile.am for gimp-data-extras/brushes/Splatters

brushsplattersdatadir = $(GIMP_DATA_DIR)/brushes/Splatters

brushsplattersdata_DATA = \
	flower.gbr		\
	flower_large.gbr	\
	nova.gbr		\
	star1.gbr		\
	star2.gbr		\
	star3.gbr		\
	star4.gbr		\
	star5.gbr		\
	swirl.gbr		\
	swirl2.gbr		\
	tulip.gbr		\
	wave.gbr		
	
EXTRA_DIST = $(brushsplattersdata_DATA)
