## Process this file with automake to produce Makefile.in

patterndatadir = $(GIMP_DATA_DIR)/patterns/Legacy

patterndata_DATA = \
	3dweave.pat			\
	abstract_flowers.pat		\
	blackoil.pat			\
	blackwhitefloor.pat		\
	blob1.pat			\
	blob2.pat			\
	bluebar.pat			\
	bluecanyons.pat			\
	bluemars.pat			\
	bluemetal.pat			\
	bluespikes.pat			\
	brownie.pat			\
	bwcubes.pat			\
	canyons2.pat			\
	cashew.pat			\
	chains.pat			\
	chroma.pat			\
	circuit.pat			\
	clouds.pat			\
	clovers.pat			\
	coins.pat			\
	colorblob.pat			\
	colored_rock.pat		\
	colorwhirl.pat			\
	connestoga.pat			\
	contrawhirl.pat			\
	cow.pat				\
	crash1.pat			\
	crazytile.pat			\
	crystals.pat			\
	curvedledge.pat			\
	deepswirl.pat			\
	diffpat.pat			\
	dirt.pat			\
	disco.pat			\
	drymud.pat			\
	dunemaze.pat			\
	dunes.pat			\
	eggcarton.pat			\
	electric-blue-ribbons.pat	\
	etbf.pat			\
	floor_tile.pat			\
	funnyblobs.pat			\
	funnymess2.pat			\
	funnymess.pat			\
	fuzzy-colors.pat		\
	gold.pat			\
	goldcloth.pat			\
	granite2.pat			\
	green_curtains.pat		\
	green_eek.pat			\
	greyweave.pat			\
	greyweave2.pat			\
	grid.pat			\
	gridwhirltile.pat		\
	headache.pat			\
	ice2.pat			\
	icechex.pat			\
	inlay.pat			\
	krinkle.pat			\
	land1.pat			\
	land2.pat			\
	lathe.pat			\
	leaves3.pat			\
	leaves4.pat			\
	leaves6.pat			\
	lumps.pat			\
	meltedcolors.pat		\
	metallica.pat			\
	metalpaths.pat			\
	mhuerock.pat			\
	money.pat			\
	neurons.pat			\
	novaugh.pat			\
	oooh.pat			\
	oooh3.pat			\
	orange_eek.pat			\
	orangebrown.pat			\
	orangecheese.pat		\
	paint-explosion.pat		\
	pastel2.pat			\
	pebbles.pat			\
	pixeled1.pat			\
	pj.pat				\
	psycho1.pat			\
	purple-ribbons.pat		\
	purple.pat			\
	purple_glow.pat			\
	redishstuff.pat			\
	redmess.pat			\
	redrings.pat			\
	rust.pat			\
	sandytext.pat			\
	send1.pat			\
	silver.pat			\
	slice1.pat			\
	spectbar.pat			\
	startile.pat			\
	swirl.pat			\
	swirl2.pat			\
	torrents.pat			\
	tube.pat			\
	unsharpswirl.pat		\
	water3.pat			\
	waves.pat			\
	wax.pat				\
	weird2.pat			\
	whirledstuff.pat		\
	woodblind.pat			\
	worn_metal_chex.pat

EXTRA_DIST = $(patterndata_DATA)
